--- a/sass/style.scss
+++ b/sass/style.scss
@@ -125,7 +125,6 @@ $libre-franklin: "Libre Franklin", sans-serif;
 
 	&__social-icons {
 		margin-top: 4em;
-		text-decoration: none;
 
 		> a > ion-icon {
 			color: $blue;
@@ -135,6 +134,11 @@ $libre-franklin: "Libre Franklin", sans-serif;
 			border-radius: 50%;
 			margin: 4px;
 			background-color: rgb(238, 238, 238);
+
+			&:hover {
+				color: white;
+				background-color: $blue;
+			}
 		}
 	}
 
